[package]
name = "bitcoin-handshake"
version = "0.1.0"
edition = "2021"
description = "Proof-of-concept tool performing bitcoin protocol handshake with a set of nodes."
license = "MIT"
readme = "README.md"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
repository = "https://github.com/spitfire05/bitcoin-handshake"

[[bin]]
name = "bitcoin-handshake"
path = "src/bin/main.rs"

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
clap = { version = "4.0.26", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.9.3"
futures = "0.3.25"
getset = "0.1.2"
log = "0.4.17"
rand = "0.8.5"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
hex-literal = "0.3.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
